# ICP_TEST

./: .gitignore  CMakeLists.txt  README.md  setup.sh
tests/: DistanceComputationTools.cpp  test.cpp
third/include/CCCoreLib/: DgmOctree.h  FastMarchingForPropagation.h  LocalModel.h  MyArray.h  MyMesh.h  MyPointCloud.h  PointCloudTpl.h  RegistrationTools.h
third/lib/cmake/CCCoreLib/: CCCoreLibConfig.cmake  CCCoreLibTargets.cmake
